Diseño del header completado, diseño del home al 80%.

--- a/design/newArticle.css
+++ b/design/newArticle.css
@@ -1,3 +1,7 @@
+#modify{ /* la página actual esté de color verde en el menú */
+
+    color: #2de233;
+}
 body{
     display: flex;
     flex-direction: column;
