--- a/design/index.css
+++ b/design/index.css
@@ -41,6 +41,7 @@ body {
 }
 
 .shelf {
+  
   width: 80%;
   margin: 15px 35px 15px 5px;
   border: none;
@@ -69,6 +70,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  cursor: pointer;
 }
 .shelf--item:hover{
 
